--- a/LiftingApp/Base.lproj/Main.storyboard
+++ b/LiftingApp/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,54 +22,63 @@
                             <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="lift" rowHeight="115" id="8Tn-y0-8bG" customClass="LiftCell" customModule="LiftingApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="115"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Tn-y0-8bG" id="WBh-YQ-siJ">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Tn-y0-8bG" id="WBh-YQ-siJ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vhq-N1-Yhe" userLabel="Lift Stack">
-                                            <rect key="frame" x="8" y="11" width="359" height="95.5"/>
+                                        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pNJ-LX-JaL">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="115"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ma6-SV-lLg">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="17.5"/>
+                                                <stackView contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="vhq-N1-Yhe" userLabel="Lift Stack">
+                                                    <rect key="frame" x="15" y="0.0" width="315" height="115"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oW-Kc-9zU">
-                                                            <rect key="frame" x="0.0" y="0.0" width="179.5" height="17.5"/>
-                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-WK-nhR">
-                                                            <rect key="frame" x="179.5" y="0.0" width="179.5" height="17.5"/>
-                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                                            <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ma6-SV-lLg">
+                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="115"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oW-Kc-9zU">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="157.5" height="115"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-WK-nhR">
+                                                                    <rect key="frame" x="157.5" y="0.0" width="157.5" height="115"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3m6-Js-ip5" userLabel="Button Stack">
+                                                            <rect key="frame" x="0.0" y="115" width="315" height="0.0"/>
+                                                        </stackView>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="6oW-Kc-9zU" firstAttribute="width" secondItem="ma6-SV-lLg" secondAttribute="width" constant="-40" id="cWh-cO-aXt"/>
-                                                    </constraints>
-                                                </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3m6-Js-ip5" userLabel="Button Stack">
-                                                    <rect key="frame" x="0.0" y="17.5" width="359" height="78"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </stackView>
                                             </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="3m6-Js-ip5" firstAttribute="leading" secondItem="vhq-N1-Yhe" secondAttribute="leading" id="Ti9-DC-dph"/>
+                                                <constraint firstAttribute="bottom" secondItem="vhq-N1-Yhe" secondAttribute="bottom" id="1MV-M2-2LA"/>
+                                                <constraint firstAttribute="trailing" secondItem="vhq-N1-Yhe" secondAttribute="trailing" constant="15" id="1dT-Vq-sUV"/>
+                                                <constraint firstItem="vhq-N1-Yhe" firstAttribute="leading" secondItem="pNJ-LX-JaL" secondAttribute="leading" constant="15" id="Htn-Fb-vld"/>
+                                                <constraint firstItem="vhq-N1-Yhe" firstAttribute="top" secondItem="pNJ-LX-JaL" secondAttribute="top" id="xeY-ow-6lU"/>
                                             </constraints>
-                                        </stackView>
+                                        </view>
                                     </subviews>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="0.82864371479999999" green="0.86929079539999998" blue="0.92538815740000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" red="0.82864371479999999" green="0.86929079539999998" blue="0.92538815740000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstItem="vhq-N1-Yhe" firstAttribute="leading" secondItem="WBh-YQ-siJ" secondAttribute="leadingMargin" id="AnS-Wc-b9h"/>
-                                        <constraint firstItem="vhq-N1-Yhe" firstAttribute="top" secondItem="WBh-YQ-siJ" secondAttribute="topMargin" constant="3" id="Kgi-Pl-jLX"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="vhq-N1-Yhe" secondAttribute="trailing" id="jzF-AA-5Dv"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="vhq-N1-Yhe" secondAttribute="bottom" id="leB-a8-OTW"/>
+                                        <constraint firstItem="pNJ-LX-JaL" firstAttribute="top" secondItem="WBh-YQ-siJ" secondAttribute="top" id="HwL-zZ-Hjk"/>
+                                        <constraint firstItem="pNJ-LX-JaL" firstAttribute="leading" secondItem="WBh-YQ-siJ" secondAttribute="leading" constant="15" id="L07-MR-l67"/>
+                                        <constraint firstAttribute="bottom" secondItem="pNJ-LX-JaL" secondAttribute="bottom" id="f2B-DV-4rd"/>
+                                        <constraint firstAttribute="trailing" secondItem="pNJ-LX-JaL" secondAttribute="trailing" constant="15" id="uL6-oT-Pjm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="buttonStack" destination="3m6-Js-ip5" id="s4s-Cg-fZd"/>
                                     <outlet property="nameLabel" destination="6oW-Kc-9zU" id="Aie-Gd-GgV"/>
+                                    <outlet property="stackDrawingView" destination="pNJ-LX-JaL" id="ZbR-My-8WV"/>
                                     <outlet property="weightLabel" destination="cIb-WK-nhR" id="Whz-Br-Abj"/>
                                 </connections>
                             </tableViewCell>
