--- a/LiftingApp/Base.lproj/Main.storyboard
+++ b/LiftingApp/Base.lproj/Main.storyboard
@@ -30,38 +30,42 @@
                                             <rect key="frame" x="15" y="0.0" width="345" height="115"/>
                                             <subviews>
                                                 <stackView contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="vhq-N1-Yhe" userLabel="Lift Stack">
-                                                    <rect key="frame" x="15" y="0.0" width="315" height="115"/>
+                                                    <rect key="frame" x="15" y="0.0" width="315" height="95"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ma6-SV-lLg">
-                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="115"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ma6-SV-lLg" userLabel="Label Stack">
+                                                            <rect key="frame" x="0.0" y="0.0" width="315" height="95"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lift" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oW-Kc-9zU">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="157.5" height="115"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="157.5" height="95"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIb-WK-nhR">
-                                                                    <rect key="frame" x="157.5" y="0.0" width="157.5" height="115"/>
+                                                                    <rect key="frame" x="157.5" y="0.0" width="157.5" height="95"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                                     <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3m6-Js-ip5" userLabel="Button Stack">
-                                                            <rect key="frame" x="0.0" y="115" width="315" height="0.0"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="gtO-fh-u1F" userLabel="Button Stack">
+                                                            <rect key="frame" x="0.0" y="95" width="315" height="0.0"/>
                                                         </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="gtO-fh-u1F" firstAttribute="width" secondItem="vhq-N1-Yhe" secondAttribute="width" id="KfB-cn-5yT"/>
+                                                        <constraint firstItem="gtO-fh-u1F" firstAttribute="top" secondItem="ma6-SV-lLg" secondAttribute="bottom" id="sr6-cg-hFa"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="vhq-N1-Yhe" secondAttribute="bottom" id="1MV-M2-2LA"/>
                                                 <constraint firstAttribute="trailing" secondItem="vhq-N1-Yhe" secondAttribute="trailing" constant="15" id="1dT-Vq-sUV"/>
                                                 <constraint firstItem="vhq-N1-Yhe" firstAttribute="leading" secondItem="pNJ-LX-JaL" secondAttribute="leading" constant="15" id="Htn-Fb-vld"/>
+                                                <constraint firstAttribute="bottom" secondItem="vhq-N1-Yhe" secondAttribute="bottom" constant="20" symbolic="YES" id="hE2-Rb-mQ8"/>
                                                 <constraint firstItem="vhq-N1-Yhe" firstAttribute="top" secondItem="pNJ-LX-JaL" secondAttribute="top" id="xeY-ow-6lU"/>
                                             </constraints>
                                         </view>
@@ -76,7 +80,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="buttonStack" destination="3m6-Js-ip5" id="s4s-Cg-fZd"/>
+                                    <outlet property="buttonStack" destination="gtO-fh-u1F" id="YyL-vW-f4R"/>
                                     <outlet property="nameLabel" destination="6oW-Kc-9zU" id="Aie-Gd-GgV"/>
                                     <outlet property="stackDrawingView" destination="pNJ-LX-JaL" id="ZbR-My-8WV"/>
                                     <outlet property="weightLabel" destination="cIb-WK-nhR" id="Whz-Br-Abj"/>
